welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.error
caughtSpeeding:2: error: not found: value vit
  vit = speed
  ^caughtSpeeding:3: error: not found: value vit
  if (isBirthday == true) {vit = vit + 5}
                           ^caughtSpeeding:4: error: not found: value vit
  if (vit <= 60) {return  0}
      ^caughtSpeeding:5: error: not found: value vit
  if (vit >= 61 && vit <= 80) {return 1}
      ^caughtSpeeding:5: error: not found: value vit
  if (vit >= 61 && vit <= 80) {return 1}
                   ^